Examples folder & README updates  (#2)

--- a/examples/stock_data_on_panel/index.html
+++ b/examples/stock_data_on_panel/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DSM SDK Script</title>
+    <title>SDK Script Example</title>
     <script>
       if (global === undefined) {
         var global = window;
@@ -13,7 +13,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/fakePIM.js"></script>
     <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
