--- a/examples/generic_dashboard/index.html
+++ b/examples/generic_dashboard/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my-react-app</title>
+    <!-- Shopify Polaris Web Components -->
+    <script type="module" src="https://cdn.shopify.com/shopifycloud/app-bridge.js"></script>
+    <link rel="stylesheet" href="https://cdn.shopify.com/static/fonts/inter/inter.css">
   </head>
   <body>
     <div id="root"></div>
