set ds on each borads

--- a/examples/generic_dashboard/index.html
+++ b/examples/generic_dashboard/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-react-app</title>
-    <!-- Shopify Polaris Web Components -->
-    <script type="module" src="https://cdn.shopify.com/shopifycloud/app-bridge.js"></script>
-    <link rel="stylesheet" href="https://cdn.shopify.com/static/fonts/inter/inter.css">
+    <title>Generic Dashboard - Design System Showcase</title>
+    <!-- Shopify Polaris Web Components - Loaded from CDN -->
+    <script type="module" crossorigin src="https://cdn.shopify.com/polaris/latest/polaris.js"></script>
+    <link rel="stylesheet" href="https://cdn.shopify.com/polaris/latest/polaris.css">
   </head>
   <body>
     <div id="root"></div>
