--- a/examples/generic_dashboard/index.html
+++ b/examples/generic_dashboard/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Generic Dashboard - Design System Showcase</title>
     <!-- Shopify Polaris Web Components - Loaded from CDN -->
-    <script type="module" crossorigin src="https://cdn.shopify.com/polaris/latest/polaris.js"></script>
-    <link rel="stylesheet" href="https://cdn.shopify.com/polaris/latest/polaris.css">
+    <script src="https://cdn.shopify.com/shopifycloud/polaris.js"></script>
   </head>
   <body>
     <div id="root"></div>
